// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/RaceListing changes sort on click 1`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      Object {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
          key="id"
          onClick={[Function]}
        >
          ID
          <span>
             
          </span>
          <SortArrow
            sort={
              Object {
                "key": "id",
                "order": "asc",
              }
            }
          />
        </th>
        <th
          className="clickableCell"
          id="raceListing-th-series"
          key="series"
          onClick={[Function]}
        >
          Series
          <span>
             
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="139"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "MX5 Cup 2016",
              ],
              "carIds": Array [
                10394,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "P0D",
              "seasonId": 2915,
              "series": "Fanatec Global Mazda MX-5 Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 139,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Okayama International Circuit - Full Course",
              "trackId": 109,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <Series
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="series"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "MX5 Cup 2016",
              ],
              "carIds": Array [
                10394,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "P0D",
              "seasonId": 2915,
              "series": "Fanatec Global Mazda MX-5 Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 139,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Okayama International Circuit - Full Course",
              "trackId": 109,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="278"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "GT1 Class",
                "Ford GT",
              ],
              "carIds": Array [
                10113,
                10389,
                10281,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT2H",
              "fixed": false,
              "licenceClass": "C",
              "licenceClassNumber": 2,
              "licenceLevel": 8,
              "official": true,
              "offset": "PT1H45M",
              "seasonId": 2948,
              "series": "Fanatec GT Challenge",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 278,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Nürburgring Combined - Gesamtstrecke 24h",
              "trackId": 186,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <Series
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="series"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "GT1 Class",
                "Ford GT",
              ],
              "carIds": Array [
                10113,
                10389,
                10281,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT2H",
              "fixed": false,
              "licenceClass": "C",
              "licenceClassNumber": 2,
              "licenceLevel": 8,
              "official": true,
              "offset": "PT1H45M",
              "seasonId": 2948,
              "series": "Fanatec GT Challenge",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 278,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Nürburgring Combined - Gesamtstrecke 24h",
              "trackId": 186,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="32"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "Legends",
              ],
              "carIds": Array [
                10008,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": false,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "PT30M",
              "seasonId": 2917,
              "series": "iRacing Advanced Legends Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 32,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Oxford Plains Speedway",
              "trackId": 10,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <Series
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="series"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "Legends",
              ],
              "carIds": Array [
                10008,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": false,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "PT30M",
              "seasonId": 2917,
              "series": "iRacing Advanced Legends Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 32,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Oxford Plains Speedway",
              "trackId": 10,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="167"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "K&N Series",
              ],
              "carIds": Array [
                10088,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "D",
              "licenceClassNumber": 1,
              "licenceLevel": 4,
              "official": true,
              "offset": "PT45M",
              "seasonId": 2923,
              "series": "iRacing ARCA Menards Series",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 167,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Lanier National Speedway - Asphalt",
              "trackId": 8,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <Series
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="series"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "K&N Series",
              ],
              "carIds": Array [
                10088,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "D",
              "licenceClassNumber": 1,
              "licenceLevel": 4,
              "official": true,
              "offset": "PT45M",
              "seasonId": 2923,
              "series": "iRacing ARCA Menards Series",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 167,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Lanier National Speedway - Asphalt",
              "trackId": 8,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing changes sort on click 2`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      Object {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
          key="id"
          onClick={[Function]}
        >
          ID
          <span>
             
          </span>
        </th>
        <th
          className="clickableCell"
          id="raceListing-th-series"
          key="series"
          onClick={[Function]}
        >
          Series
          <span>
             
          </span>
          <SortArrow
            sort={
              Object {
                "key": "series",
                "order": "desc",
              }
            }
          />
        </th>
        <th
          className={null}
          id="raceListing-th-raceTimes"
          key="raceTimes"
          onClick={[Function]}
        >
          Race times
          <span>
             
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="167"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "K&N Series",
              ],
              "carIds": Array [
                10088,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "D",
              "licenceClassNumber": 1,
              "licenceLevel": 4,
              "official": true,
              "offset": "PT45M",
              "seasonId": 2923,
              "series": "iRacing ARCA Menards Series",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 167,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Lanier National Speedway - Asphalt",
              "trackId": 8,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <Series
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="series"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "K&N Series",
              ],
              "carIds": Array [
                10088,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "D",
              "licenceClassNumber": 1,
              "licenceLevel": 4,
              "official": true,
              "offset": "PT45M",
              "seasonId": 2923,
              "series": "iRacing ARCA Menards Series",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 167,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Lanier National Speedway - Asphalt",
              "trackId": 8,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <NextRace
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="raceTimes"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "K&N Series",
              ],
              "carIds": Array [
                10088,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "D",
              "licenceClassNumber": 1,
              "licenceLevel": 4,
              "official": true,
              "offset": "PT45M",
              "seasonId": 2923,
              "series": "iRacing ARCA Menards Series",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 167,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Lanier National Speedway - Asphalt",
              "trackId": 8,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="32"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "Legends",
              ],
              "carIds": Array [
                10008,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": false,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "PT30M",
              "seasonId": 2917,
              "series": "iRacing Advanced Legends Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 32,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Oxford Plains Speedway",
              "trackId": 10,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <Series
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="series"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "Legends",
              ],
              "carIds": Array [
                10008,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": false,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "PT30M",
              "seasonId": 2917,
              "series": "iRacing Advanced Legends Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 32,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Oxford Plains Speedway",
              "trackId": 10,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <NextRace
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="raceTimes"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "Legends",
              ],
              "carIds": Array [
                10008,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": false,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "PT30M",
              "seasonId": 2917,
              "series": "iRacing Advanced Legends Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 32,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Oxford Plains Speedway",
              "trackId": 10,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="278"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "GT1 Class",
                "Ford GT",
              ],
              "carIds": Array [
                10113,
                10389,
                10281,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT2H",
              "fixed": false,
              "licenceClass": "C",
              "licenceClassNumber": 2,
              "licenceLevel": 8,
              "official": true,
              "offset": "PT1H45M",
              "seasonId": 2948,
              "series": "Fanatec GT Challenge",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 278,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Nürburgring Combined - Gesamtstrecke 24h",
              "trackId": 186,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <Series
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="series"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "GT1 Class",
                "Ford GT",
              ],
              "carIds": Array [
                10113,
                10389,
                10281,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT2H",
              "fixed": false,
              "licenceClass": "C",
              "licenceClassNumber": 2,
              "licenceLevel": 8,
              "official": true,
              "offset": "PT1H45M",
              "seasonId": 2948,
              "series": "Fanatec GT Challenge",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 278,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Nürburgring Combined - Gesamtstrecke 24h",
              "trackId": 186,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <NextRace
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="raceTimes"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "GT1 Class",
                "Ford GT",
              ],
              "carIds": Array [
                10113,
                10389,
                10281,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT2H",
              "fixed": false,
              "licenceClass": "C",
              "licenceClassNumber": 2,
              "licenceLevel": 8,
              "official": true,
              "offset": "PT1H45M",
              "seasonId": 2948,
              "series": "Fanatec GT Challenge",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 278,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Nürburgring Combined - Gesamtstrecke 24h",
              "trackId": 186,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="139"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "MX5 Cup 2016",
              ],
              "carIds": Array [
                10394,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "P0D",
              "seasonId": 2915,
              "series": "Fanatec Global Mazda MX-5 Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 139,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Okayama International Circuit - Full Course",
              "trackId": 109,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <Series
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="series"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "MX5 Cup 2016",
              ],
              "carIds": Array [
                10394,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "P0D",
              "seasonId": 2915,
              "series": "Fanatec Global Mazda MX-5 Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 139,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Okayama International Circuit - Full Course",
              "trackId": 109,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
        <NextRace
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="raceTimes"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "MX5 Cup 2016",
              ],
              "carIds": Array [
                10394,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "P0D",
              "seasonId": 2915,
              "series": "Fanatec Global Mazda MX-5 Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 139,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Okayama International Circuit - Full Course",
              "trackId": 109,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing renders correctly 1`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      Object {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
          key="id"
          onClick={[Function]}
        >
          ID
          <span>
             
          </span>
          <SortArrow
            sort={
              Object {
                "key": "id",
                "order": "asc",
              }
            }
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="139"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "MX5 Cup 2016",
              ],
              "carIds": Array [
                10394,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "P0D",
              "seasonId": 2915,
              "series": "Fanatec Global Mazda MX-5 Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 139,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Okayama International Circuit - Full Course",
              "trackId": 109,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="278"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "GT1 Class",
                "Ford GT",
              ],
              "carIds": Array [
                10113,
                10389,
                10281,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT2H",
              "fixed": false,
              "licenceClass": "C",
              "licenceClassNumber": 2,
              "licenceLevel": 8,
              "official": true,
              "offset": "PT1H45M",
              "seasonId": 2948,
              "series": "Fanatec GT Challenge",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 278,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Nürburgring Combined - Gesamtstrecke 24h",
              "trackId": 186,
              "type": "Road",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="32"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "Legends",
              ],
              "carIds": Array [
                10008,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": false,
              "licenceClass": "R",
              "licenceClassNumber": 0,
              "licenceLevel": 1,
              "official": true,
              "offset": "PT30M",
              "seasonId": 2917,
              "series": "iRacing Advanced Legends Cup",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 32,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Oxford Plains Speedway",
              "trackId": 10,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
      <tr
        key="167"
      >
        <Id
          favouriteCars={Array []}
          favouriteSeries={Array []}
          favouriteTracks={Array []}
          key="id"
          ownedCars={Array []}
          ownedTracks={Array []}
          race={
            Object {
              "carClasses": Array [
                "K&N Series",
              ],
              "carIds": Array [
                10088,
              ],
              "endTime": "2020-09-29T00:00:00.000Z",
              "everyTime": "PT1H",
              "fixed": true,
              "licenceClass": "D",
              "licenceClassNumber": 1,
              "licenceLevel": 4,
              "official": true,
              "offset": "PT45M",
              "seasonId": 2923,
              "series": "iRacing ARCA Menards Series",
              "seriesEnd": "2020-12-08T00:00:00.000Z",
              "seriesId": 167,
              "seriesStart": "2020-09-15T00:00:00.000Z",
              "setTimes": undefined,
              "startTime": "2020-09-22T00:00:00.000Z",
              "track": "Lanier National Speedway - Asphalt",
              "trackId": 8,
              "type": "Oval",
              "week": 1,
              "weekLength": "PT168H",
            }
          }
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing renders not found favourite cars 1`] = `
<p>
  No races this week match your favourite cars. Try turning the filter off or adding some.
</p>
`;

exports[`components/RaceListing renders not found favourite series 1`] = `
<p>
  No races this week match your favourite series. Try turning the filter off or adding some.
</p>
`;

exports[`components/RaceListing renders not found favourite tracks 1`] = `
<p>
  No races this week match your favourite tracks. Try turning the filter off or adding some.
</p>
`;
